// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should correctly render ExpensesSummary component with 0 expenses 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span />
       
      expenses
       totalling: 
      <span>
        ₪
        0.00
      </span>
    </h1>
    <p
      className="page-header__title"
    >
      In addition, there 
      are
       
      <span />
       hidden expense
      s
    </p>
    <div
      className="page-header__actions"
    >
      <Link
        className="button button--hover-darken"
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`Should correctly render ExpensesSummary component with 1 expenses 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        1
      </span>
       
      expense
       totalling: 
      <span>
        ₪
        1.23
      </span>
    </h1>
    <p
      className="page-header__title"
    >
      In addition, there 
      are
       
      <span />
       hidden expense
      s
    </p>
    <div
      className="page-header__actions"
    >
      <Link
        className="button button--hover-darken"
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`Should correctly render ExpensesSummary component with multiple expenses 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        23
      </span>
       
      expenses
       totalling: 
      <span>
        ₪
        1,234,567.89
      </span>
    </h1>
    <p
      className="page-header__title"
    >
      In addition, there 
      are
       
      <span />
       hidden expense
      s
    </p>
    <div
      className="page-header__actions"
    >
      <Link
        className="button button--hover-darken"
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;
